feat: add ConfigurationProperties and ConfigurationMetadata plugins for enhanced configuration management