@@ -117,6 +117,16 @@ class IntegrationTestPluginTests {
 		assertThat(TaskDependencies.namesOf(task.getDependsOn())).doesNotContain(JavaPlugin.TEST_TASK_NAME);
 	}
 
+	/**
+	 * These tests drive a build of their own, and Gradle's native-platform loads a
+	 * library from an unnamed module. Without the grant, JEP 472 prints a warning today
+	 * and fails the call on some later JDK.
+	 */
+	@org.junit.jupiter.api.Test
+	void grantsTheNativeAccessTheBuildItDrivesNeeds() {
+		assertThat(intTestTask(javaProject()).getJvmArgs()).contains("--enable-native-access=ALL-UNNAMED");
+	}
+
 	@org.junit.jupiter.api.Test
 	void putsTheLauncherOnTheRuntimeClasspath() {
 		Project project = javaProject();
